--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </a>
     </div>
     <div id="booking" class="contact-clean" style="background-color: rgb(255,255,255);">
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfz1-PVvGHUZfMhaPqdFs4lT3p6eRAdeuw6bGX0rQ6a_2J7YQ/viewform?embedded=true" width="640" height="1722" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <div class="embed-responsive embed-responsive-16by9" style="height: 713px;"><iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSfz1-PVvGHUZfMhaPqdFs4lT3p6eRAdeuw6bGX0rQ6a_2J7YQ/viewform?embedded=true"></iframe></div>
     </div>
     <div class="footer-dark">
         <footer>
