updated info for covid-19

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
             <div class="container">
                 <h1 class="masthead-heading mb-0">The Music Village</h1>
                 <h2 class="masthead-subheading mb-0">Block Party</h2>
-                <h2 class="masthead-subheading mb-0" style="font-size: 24px;">Saturday, May 2, 2020 at Howard Park</h2><a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://conta.cc/2EHjTae" target="_blank" style="background-color: #28b886;">Survey</a></div>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px; margin-top: 16px;">Due to the COVID-19 crisis, The Music Village and South Bend Venues Parks & Arts have postponed the TMV Block Party, originally scheduled for May 2nd at Howard Park.</h2>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px; margin-top: 16px;">A new date will be announced as soon as possible.</h2>
+                <h2 class="masthead-subheading mb-0" style="font-size: 24px; margin-top: 16px;">
+                  For the most up to date information, please visit TMV's
+                  <a href="https://www.facebook.com/villagemusicalarts/" style="color:#19a2d9;">Facebook page</a>
+                  and
+                  <a href="https://www.themusicvillage.org/" style="color:#19a2d9;">website</a>
+               </h2>
+                <a class="btn btn-outline-info active btn-xl rounded-pill mt-5" role="button" href="https://conta.cc/2EHjTae" target="_blank" style="background-color: #28b886;">Survey</a></div>
         </div>
         <div class="bg-circle-1 bg-circle" style="color: #ffffff;background-image: url(&quot;none&quot;);background-color: #d9176c;"></div>
         <div class="bg-circle-2 bg-circle" style="color: #19A2D9;background-image: url(&quot;none&quot;);background-color: #19a2d9;"></div>
